Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignNumberNumberField.quorum
class Main
    number v = 5
    action Main
        Test(v)
    end

    action Test(number var)
        if var = 5.0
            output "passed"
        end
    end
end
